Fix resume on mobile

--- a/public/assets/sass/sections/_resume.sass
+++ b/public/assets/sass/sections/_resume.sass
@@ -65,6 +65,16 @@
     // clip-path: polygon(50% 0%, 100% 65px, 100% 100%, 0 100%, 0 65px)
     // +res-bl(lg)
     //     clip-path: polygon(50% 0%, 100% 35px, 100% 100%, 0 100%, 0 35px)
+.resume-link
+        color: $white-color
+        text-decoration: underline
+        margin-bottom: 20px
+        margin-top: -20px
+        +res-ab(lg)
+            display: none
+        i
+            margin-left: 5px
+            transform: rotate(-45deg)
 
 .resume-box
     padding: 60px
